# llama.cpp

./: .gitignore  CMakeLists.txt  CORRELATIONS.md  Makefile  README.md  correlations.cpp  correlations.h  ggml-cuda.cu  ggml-opencl.cpp  ggml.c  servers.txt
common/: common.cpp  common.h
correlations/: CMakeLists.txt  co_activations.cpp  co_activations.hpp  compress.cpp  compress.hpp  correlations.cpp  correlations.h  mmapfile.cpp  mmapfile.hpp  study_co_activations.cpp  study_correlations.cpp  sum_correlations.cpp
correlations/attic/: sorting_ideas.cpp
examples/perplexity/: perplexity.cpp
examples/simple/: simple.cpp
scripts/: collect_correlations.py  delete_correlations.py  launch_correlations.py  study_correlations.py
